# web-backend-starter

./: .gitignore  Cargo.toml  LICENSE
api-server/: Cargo.toml
api-server/src/: main.rs
api-server/src/common/: mod.rs  responder.rs
api-server/src/routes/: health_check.rs  mod.rs  not_found.rs
configs/: default.json
extras/: start_redis.sh
job-scheduler/: Cargo.toml
migrations/: 20230406133622_users_table.sql  20230424094434_job_scheduler.sql  20230424095247_update_job_scheduler_table_name.sql
src/: app_settings.rs  globals.rs  main.rs
src/commons/: responder.rs
src/services/: health_check.rs  not_found.rs
utils/: Cargo.toml
utils/src/: app_settings.rs  config.rs  lib.rs
