[package]
name = "web-backend-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
config = "0.13.3"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.21.2", features = ["full"] }
