[workspace]
members = [
  "utils",
  "api-server",
  "job-scheduler"
]

[workspace.dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
